# TIE-mcp-server

./: .bandit  .dockerignore  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  claude_desktop_config.example.json  index.html  mcp_config.example.json  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci-cd.yml
api-reference/: index.html
data/datasets/data collection/: OpenCTI_graphQL_queries.ipynb
docker/: Dockerfile  docker-compose.yml
docs/: api-reference.md  examples.md  getting-started.md  index.md
examples/: README.md  index.html  model_retraining.ipynb
getting-started/: index.html
notebooks/: model_retraining.ipynb
search/: search_index.json
src/tie_mcp/: __init__.py  server.py
src/tie_mcp/api/: schemas.py
src/tie_mcp/config/: __init__.py  settings.py
src/tie_mcp/core/: __init__.py  engine_manager.py
src/tie_mcp/core/tie/: cli.py  engine.py  matrix.py  matrix_builder.py  utils.py
src/tie_mcp/core/tie/recommender/: __init__.py  bpr_recommender.py  factorization_recommender.py  implicit_bpr_recommender.py  implicit_wals_recommender.py  recommender.py  top_items_recommender.py  wals_recommender.py
src/tie_mcp/models/: __init__.py  model_manager.py
src/tie_mcp/monitoring/: __init__.py  metrics.py
src/tie_mcp/storage/: __init__.py  database.py
src/tie_mcp/utils/: async_utils.py  file_utils.py  logging.py
tests/: conftest.py
tests/performance/: test_performance.py
tests/unit/: test_server.py  test_tie_mcp.py
